# python-fpg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  apply_patches.sh  setup.py
patches/: modifications.patch
src/: bindings.cpp
